--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 		"csurf": "^1.11.0",
 		"express": "^4.17.2",
 		"express-bouncer": "^0.2.0",
+		"express-validator": "^6.14.0",
 		"helmet": "^5.0.2",
 		"node-cache": "^5.1.2",
 		"peer": "^0.6.1",
